<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">


    <Button
        android:id="@+id/btnMantenimiento"
        style="@style/styleButton2"
        android:layout_width="match_parent"
        android:layout_margin="40dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/mantenimiento" />

    <Button
        android:id="@+id/btnReporte"
        style="@style/styleButton2"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/reporte" />


    <Button
        android:id="@+id/btnDeslogin"
        style="@style/styleButton2"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cerrar" />

</LinearLayout>
