<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="50dip"
    tools:context=".ui.fragment.InicioFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dip">

        <EditText android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/correo"
            android:layout_marginTop="15dip"
            android:inputType="textEmailAddress" />

        <EditText android:id="@+id/txtPass"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="30dip" />


        <Button android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ingresar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            style="@style/styleButton2"/>

    </LinearLayout>
</LinearLayout>
