<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.RegistroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/msgMensaje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/white"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/txtIdentificacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/identificacion"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/nombre"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/white"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/txtApellido"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/apellido"
                            android:layout_weight="1"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/txtDireccion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/direccion"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/white"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/txtCompra"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/producto"
                            android:layout_weight="1"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/txtPrecio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/precio"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnMicro"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_mic" />

                    <ImageButton
                        android:id="@+id/btnPlay"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_play" />

                    <ImageButton
                        android:id="@+id/btnDelete"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_delete" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_photo"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_photo" />

                    <ImageButton
                        android:id="@+id/bt_rota_l"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_rotate_l" />

                    <ImageButton
                        android:id="@+id/bt_rota_r"
                        style="@style/styleButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_rotate_r" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCalcular"
                    style="@style/styleButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calcular" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="25sp"
                    android:padding="10sp"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_latitud1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:text="@string/tv_latitud1"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_longitud1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:text="@string/tv_longitud1"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_altura1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:text="@string/tv_altura1"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvLatitud"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvLongitud"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvAltura"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|center_horizontal|center_vertical"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>

                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/msg_imagen"
                    android:scaleType="centerInside"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@tools:sample/backgrounds/scenic" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAgregar"
                style="@style/styleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agregar" />

            <Button
                android:id="@+id/btnList"
                style="@style/styleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listar" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>